# python-backend

./: .bandit.yaml  .env  Dockerfile  alembic.ini  docker-compose.yml  makefile  pyproject.toml  requirements.txt
app/: config.py  database.py  main.py  models.py
app/repositories/: abstract_repo.py  sql_customer_repository.py
app/routers/: customer_router.py
app/schemas/: customer_schemas.py
app/services/: abstract_service.py  customer_service.py
app/test/: test_customer_service.py
migrations/: env.py
migrations/versions/: f6babaa68573_create_customers_table.py
