[project]
name            = "client_ms"
version         = "1.0.0"
requires-python = ">=3.12"
dependencies    = []


[tool.ruff]
line-length    = 79
target-version = "py312"
select = [
  "F","E","W","C901","I","N","UP","S","B","A","C4","ISC",
  "LOG","INP","PIE","PT","RET","SIM","ERA","PL","TRY",
]
ignore = ["D203","D212","D400","ISC001"]
fixable = ["ALL"]
per-file-ignores = { "**/tests/*" = ["S101","D","PLR2004"] }

[tool.pytest.ini_options]
minversion = "7.0"
addopts    = "--strict-markers --maxfail=1 --cov=app --cov-report=term-missing"
testpaths = ["app/test"] 

[tool.coverage.run]
branch = true
source = ["app"]
omit   = ["*/__init__.py"]

[tool.coverage.report]
show_missing = true
fail_under   = 75
html_dir     = "public/coverage"

[tool.mypy]
python_version = 3.12
strict         = true
exclude        = ["build/","dist/"]

[tool.black]
line-length = 79
target-version = ["py312"]

[tool.isort]
profile     = "black"
line_length = 79
